[package]
name = "send-usd"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "send_usd"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
solana-program = "1.18.26"
pyth-client = "0.1.1"  # Use the correct version of `pyth-client`
pyth-solana-receiver-sdk = "0.4.0"  # Use the correct SDK


